# midas-journal-782

MPIAnisotropicDiffusion/Document/: ImageOverlap.dia  ImageOverlap.eps  MPIAnisotropicDiffusion.aux  MPIAnisotropicDiffusion.blg  MPIAnisotropicDiffusion.dvi  MPIAnisotropicDiffusion.out  MPIAnisotropicDiffusion.tex~  MPIAnisotropicDiffusion.toc  MPIVectorGradientAnisotropicDiffusion.dia  MPIVectorGradientAnisotropicDiffusion.dia~  MPIVectorGradientAnisotropicDiffusionGraph.eps  VisibleWomanHeadFull_Slice.eps  VisibleWomanHeadFull_Smooth_Slice.eps  time.eps  time.gnuplot  time.gnuplot~  time_100slices.txt  time_200slices.txt  time_200slices.txt~  time_50slices.txt
MPIAnisotropicDiffusion/Source/: CMakeLists.txt  CMakeLists.txt~  MPIVectorGradientAnisotropicDiffusionImageFilter.cxx  RGBSmooth.cxx  RGBSmoothFair.cxx  itkImageRegionNonCubeSplitter.h  itkImageRegionNonCubeSplitter.txx
